# gedit

./: .cvsignore  .gitlab-ci.yml  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in
bindings/python/: Makefile.am  gedit.defs  gedit.override
data/: gedit.1  gedit.schemas.in  gedit.schemas.in.in  org.gnome.gedit.appdata.xml.in  org.gnome.gedit.gschema.xml.in  osx.css
gedit/: ChangeLog  Gedit.py  Makefile.am  bonobo-mdi.c  gedit-app-osx.c  gedit-app.c  gedit-app.h  gedit-close-confirmation-dialog.c  gedit-commands-edit.c  gedit-commands-file-print.c  gedit-commands-file.c  gedit-commands-private.h  gedit-commands-search.c  gedit-commands-view.c  gedit-commands.c  gedit-commands.h  gedit-configurable.c  gedit-configurable.h  gedit-convert.c  gedit-convert.h  gedit-dbus.c  gedit-debug.c  gedit-debug.h  gedit-dirs.c  gedit-dirs.h  gedit-document-input-stream.h  gedit-document-interface.c  gedit-document-interface.h  gedit-document-loader.c  gedit-document-loader.h  gedit-document-saver.c  gedit-document-saver.h  gedit-document.c  gedit-document.h  gedit-documents-commands.c  gedit-documents-panel.c  gedit-documents-panel.h  gedit-encodings-option-menu.c  gedit-encodings.c  gedit-encodings.h  (+94 more)
gedit/dialogs/: Makefile.am  gedit-close-confirmation-dialog.c  gedit-close-confirmation-dialog.h  gedit-dialog-goto-line.c  gedit-dialog-replace.c  gedit-dialog-uri.c  gedit-dialogs.h  gedit-encodings-dialog.c  gedit-encodings-dialog.glade2  gedit-encodings-dialog.h  gedit-open-location-dialog.c  gedit-page-setup-dialog.c  gedit-page-setup-dialog.h  gedit-plugin-manager.c  gedit-plugin-manager.h  gedit-plugin-program-location-dialog.c  gedit-preferences-dialog.c  gedit-preferences-dialog.h  gedit-preferences.glade2  gedit-search-dialog.c  search-panel.glade
gedit/recent-files/: Makefile.am  egg-recent-view-uimanager.c
gedit/resources/css/: gedit-style.css  gedit.adwaita.css
help/: ChangeLog
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/pt_BR/: pt_BR.po
help/ru/: ru.po
help/sv/: sv.po
m4/: .cvsignore
osx/: README
osx/jhbuild/: gedit.modules
plugin-loaders/python/bindings/: gedit.defs
plugins/: ChangeLog  Makefile.am
plugins/changecase/: changecase.c  changecase.gedit-plugin.desktop.in  gedit-changecase-plugin.c  gedit-changecase-plugin.h
plugins/checkupdate/: gedit-check-update-plugin.c
plugins/docinfo/: docinfo.c  docinfo.gedit-plugin.desktop.in  docinfo.glade2  gedit-docinfo-plugin.c  gedit-docinfo-plugin.h
plugins/externaltools/tools/: functions.py  library.py  linkparsing.py  linkparsing_test.py  manager.py  tools.ui  windowactivatable.py
plugins/filebrowser/: Makefile.am  gedit-file-browser-plugin.c  gedit-file-browser-store.c  gedit-file-browser-view.c  gedit-file-browser-widget.c
plugins/filebrowser/messages/: gedit-file-browser-message-activation.c  gedit-file-browser-message-activation.h  gedit-file-browser-message-add-context-item.c  gedit-file-browser-message-add-context-item.h  gedit-file-browser-message-add-filter.c  gedit-file-browser-message-add-filter.h  gedit-file-browser-message-get-root.c  gedit-file-browser-message-get-root.h  gedit-file-browser-message-get-view.c  gedit-file-browser-message-get-view.h  gedit-file-browser-message-id-location.c  gedit-file-browser-message-id-location.h  gedit-file-browser-message-id.c  gedit-file-browser-message-id.h  gedit-file-browser-message-set-emblem.c  gedit-file-browser-message-set-emblem.h  gedit-file-browser-message-set-root.c  gedit-file-browser-message-set-root.h
plugins/indent/: gedit-indent-plugin.h  indent.c  indent.gedit-plugin.desktop.in
plugins/modelines/: modeline-parser.c
plugins/pythonconsole/: Makefile.am  pythonconsole.py
plugins/quickopen/quickopen/: __init__.py  popup.py
plugins/sample/: gedit-sample-plugin.c  gedit-sample-plugin.h  sample.c  sample.gedit-plugin.desktop.in
plugins/savecopy/: savecopy.c
plugins/shell_output/: shell_output.c
plugins/snippets/data/: xslt.xml
plugins/snippets/snippets/: Document.py  Makefile.am  SnippetController.py  SnippetsDialog.py  SnippetsLibrary.py  __init__.py  completion.py  configurable.py  functions.py  manager.py  shareddata.py  snippets.ui  windowactivatable.py
plugins/sort/: Makefile.am  gedit-sort-plugin.c  gedit-sort-plugin.h  sort.c  sort.gedit-plugin.desktop.in
plugins/spell/: Makefile.am  gedit-automatic-spell-checker.c  gedit-spell-checker-language.c  gedit-spell-checker.c  gedit-spell-language-dialog.c  gedit-spell-plugin.c  spell.c
plugins/taglist/: gedit-taglist-plugin-panel.c  gedit-taglist-plugin-panel.h  gedit-taglist-plugin-parser.c  gedit-taglist-plugin-window.c  gedit-taglist-plugin.c  gedit-taglist-plugin.h  taglist.gedit-plugin.desktop.in
plugins/time/: gedit-time-plugin.c  gedit-time-plugin.h  time.c  time.gedit-plugin.desktop.in
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  ga.po  gd.po  gl.po  gu.po  he.po  hi.po  hr.po  (+50 more)
snap/: snapcraft.yaml
src/: ChangeLog  gedit-document.c  gedit-print.c  gedit-utils.c  plugin.c
tests/: Makefile.am  test-occurrence.c
tools/: generate-message.py  generate-plugin.py
tools/plugin_template/: Makefile.am  gedit-xyz-plugin.c  gedit-xyz-plugin.h  xyz.gedit-plugin.desktop.in
win32/: build-installer  build-installer.sh  gedit.iss.in
