#DIST_SUBDIRS = changecase docinfo savecopy sample time spell indent taglist shell_output sort
DIST_SUBDIRS = changecase docinfo indent sample time taglist
#SUBDIRS = changecase docinfo savecopy sample time indent taglist shell_output sort $(SPELL_PLUGIN_DIR)
SUBDIRS = changecase docinfo indent sample time taglist
EXTRA_DIST = ChangeLog
